[package]
name = "uptime_display"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
embedded-hal = "0.2.5"
rp-pico = "0.3.0"
embedded-time = "0.12.1"
rp2040-boot2 = "0.2.0"
defmt = "0.3.1"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }
embedded-graphics = "0.7.1"
ssd1306 = "0.7.0"
nb = "1.0.0"
